WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52619
Web Inspector: preserve pause on exception state in settings.
https://bugs.webkit.org/show_bug.cgi?id=52619
Summary
Web Inspector: preserve pause on exception state in settings.
Pavel Feldman
Reported
2011-01-18 04:38:04 PST
Patch to follow.
Attachments
[PATCH] Proposed change.
(8.17 KB, patch)
2011-01-18 05:16 PST
,
Pavel Feldman
yurys
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2011-01-18 05:16:17 PST
Created
attachment 79265
[details]
[PATCH] Proposed change.
Yury Semikhatsky
Comment 2
2011-01-18 05:22:44 PST
Comment on
attachment 79265
[details]
[PATCH] Proposed change. View in context:
https://bugs.webkit.org/attachment.cgi?id=79265&action=review
> Source/WebCore/inspector/front-end/ScriptsPanel.js:393 > + this._setPauseOnExceptions(WebInspector.settings.pauseOnExceptionState);
Please make sure that this preference is properly cleared in the tests.
Pavel Feldman
Comment 3
2011-01-18 06:20:51 PST
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M LayoutTests/platform/chromium/test_expectations.txt M Source/WebCore/ChangeLog M Source/WebCore/inspector/InspectorController.cpp M Source/WebCore/inspector/InspectorDebuggerAgent.cpp M Source/WebCore/inspector/InspectorDebuggerAgent.h M Source/WebCore/inspector/front-end/ScriptsPanel.js M Source/WebCore/inspector/front-end/Settings.js M Source/WebCore/inspector/front-end/inspector.js Committed
r76021
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug