2011-01-18  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: preserve pause on exception state in settings.
        https://bugs.webkit.org/show_bug.cgi?id=52619

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::getInspectorState):
        * inspector/InspectorDebuggerAgent.cpp:
        (WebCore::InspectorDebuggerAgent::setPauseOnExceptionsState):
        * inspector/InspectorDebuggerAgent.h:
        * inspector/front-end/ScriptsPanel.js:
        (WebInspector.ScriptsPanel):
        (WebInspector.ScriptsPanel.prototype.debuggerWasEnabled):
        (WebInspector.ScriptsPanel.prototype._updatePauseOnExceptionsState):
        (WebInspector.ScriptsPanel.prototype._togglePauseOnExceptions):
        (WebInspector.ScriptsPanel.prototype._setPauseOnExceptions):
        * inspector/front-end/Settings.js:
        (WebInspector.Settings):
        * inspector/front-end/inspector.js:
        (WebInspector.doLoadedDone.populateInspectorState):


Canonical link: https://commits.webkit.org/66259@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76021 268f45cc-cd09-0410-ab3c-d52691b4dbfc